# faketty

./: Cargo.toml  README.md
.github/workflows/: install.yml
examples/: faketty-min.rs
src/: lib.rs
tests/: test.rs
