[package]
name = "faketty-lib"
version = "1.0.19"
authors = ["David Tolnay <dtolnay@gmail.com>", "Bryan Lai <bryanlais@gmail.com>"]
categories = ["command-line-utilities", "os::unix-apis"]
description = "Library fork of dtolnay/faketty"
edition = "2021"
keywords = ["tty"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bryango/faketty-lib"
rust-version = "1.69.0" # nix 0.29 requires rustc 1.69

[[bin]]
name = "faketty"
required-features = ["clap"]

[dependencies]
clap = { version = "4", features = ["deprecated"], optional = true }
nix = { version = "0.29", default-features = false, features = ["fs", "process", "term"] }

[dev-dependencies]
scratch = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
